Simplify product object
